<resources>
    <string name="app_name">GestionMultimedia</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="correo">usuario@nextuniversity.com</string>
    <string name="animacion">Animación</string>
    <string name="graficos">Gráficos</string>
    <string name="imagen">Imagen</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>

    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="titulo">Media Cloud</string>

    <string name="no_archivo">Ruta: ningún archivo seleccionado.</string>
    <string name="abrir">ABRIR</string>
    <string name="capturar">CAPTURAR</string>
    <string name="reproducir_audio">REPRODUCIR AUDIO</string>
    <string name="detener">DETENER REPRODUCCION</string>
    <string name="detener_grabacion">DETENER GRABACIÓN</string>
    <string name="iniciar_grabacion">INICIAR GRABACIÓN</string>
    <string name="detener_reproduccion">DETENER REPRODUCCION</string>

</resources>
